templates reformat code

--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -4,55 +4,56 @@
 
 {% block body %}
 
-<div class="container-fluid">
-    <div class="container p-0">
-        <div class="row justify-content-center pt-5">
-            <div class="col-lg-4 pt-5">
-                <div class="d-border p-4">
+    <div class="container-fluid">
+        <div class="container p-0">
+            <div class="row justify-content-center pt-5">
+                <div class="col-lg-4 pt-5">
+                    <div class="d-border p-4">
 
-                    <div class="text-center pt-3">
+                        <div class="text-center pt-3">
 
-                        {% include 'component/logo.html.twig' %}
+                            {% include 'component/logo.html.twig' %}
 
-                        <h4 class="my-3 text-center text-secondary">Sign In</h4>
+                            <h4 class="my-3 text-center text-secondary">Sign In</h4>
 
-                        <p class="text-center text-secondary mb-3 fs-15">
-                            Enter your OTP to continue.
-                        </p>
-                    </div>
-
-                    {% include 'component/form_alert.html.twig' %}
-
-                    <form action="{{ path('app_login') }}" method="post">
-                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-                        <div class="mb-3">
-                            <input class="form-control" type="email" placeholder="Email" aria-label="Email"
-                                name="_username" required value="{{email}}"
-                                style="height: 46px; border-radius: 0;">
+                            <p class="text-center text-secondary mb-3 fs-15">
+                                Enter your OTP to continue.
+                            </p>
                         </div>
-                        <div class="mb-3">
-                            <input class="form-control" type="text" placeholder="Security code" aria-label="OTP"
-                                name="otp" required
-                                style="height: 46px; border-radius: 0;">
-                            <small class="text-secondary">Enter OTP that being sent to you</small>
-                        </div>
-                        <div class="mb-3">
-                            <button class="btn btn-primary w-100" style="height: 46px; border-radius: 0;">Sign
-                                In</button>
-                        </div>
-                    </form>
 
-                    <div class="my-3 pt-3 text-center">
-                        <p class="text-secondary fs-15">No OTP yet? <a href="{{path('app_auth')}}"
-                                class="d-color text-decoration-none">
-                                Request new one!</a>
-                        </p>
+                        {% include 'component/form_alert.html.twig' %}
+
+                        <form action="{{ path('app_login') }}" method="post">
+                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+                            <div class="mb-3">
+                                <input class="form-control" type="email" placeholder="Email" aria-label="Email"
+                                       name="_username" required value="{{ email }}"
+                                       style="height: 46px; border-radius: 0;">
+                            </div>
+                            <div class="mb-3">
+                                <input class="form-control" type="text" placeholder="Security code" aria-label="OTP"
+                                       name="otp" required
+                                       style="height: 46px; border-radius: 0;">
+                                <small class="text-secondary">Enter OTP that being sent to you</small>
+                            </div>
+                            <div class="mb-3">
+                                <button class="btn btn-primary w-100" style="height: 46px; border-radius: 0;">Sign
+                                    In
+                                </button>
+                            </div>
+                        </form>
+
+                        <div class="my-3 pt-3 text-center">
+                            <p class="text-secondary fs-15">No OTP yet? <a href="{{ path('app_auth') }}"
+                                                                           class="d-color text-decoration-none">
+                                    Request new one!</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 {% endblock %}
