--- a/templates/account/auth.html.twig
+++ b/templates/account/auth.html.twig
@@ -4,52 +4,53 @@
 
 {% block body %}
 
-<div class="container-fluid">
-    <div class="container p-0">
-        <div class="row justify-content-center pt-5">
-            <div class="col-lg-4 pt-5">
-                <div class="d-border p-4">
+    <div class="container-fluid">
+        <div class="container p-0">
+            <div class="row justify-content-center pt-5">
+                <div class="col-lg-4 pt-5">
+                    <div class="d-border p-4">
 
-                    <div class="text-center pt-3">
-                        
-                        {% include 'component/logo.html.twig' %}
+                        <div class="text-center pt-3">
 
-                        <h4 class="my-3 text-center text-secondary">Authenticate</h4>
+                            {% include 'component/logo.html.twig' %}
 
-                        <p class="text-center text-secondary mb-3 fs-15">
-                            For security reasons, we will send you a security code via e-mail which you can use it to
-                            access your dashboard.
-                        </p>
-                    </div>
+                            <h4 class="my-3 text-center text-secondary">Authenticate</h4>
 
-                    {% include 'component/form_alert.html.twig' %}
-
-                    <form action="{{ path('app_auth_send') }}" method="post">
-                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-                        <div class="mb-3">
-                            <input class="form-control" type="email" placeholder="Email" aria-label="Email"
-                                name="_username" required
-                                style="height: 46px; border-radius: 0;">
-                            <small class="text-secondary">Enter the email to receive your login code</small>
+                            <p class="text-center text-secondary mb-3 fs-15">
+                                For security reasons, we will send you a security code via e-mail which you can use it
+                                to
+                                access your dashboard.
+                            </p>
                         </div>
-                        <div class="mb-3">
-                            <button class="btn btn-primary w-100" style="height: 46px; border-radius: 0;">
-                                Sign In
-                            </button>
-                        </div>
-                    </form>
 
-                    <div class="my-3 text-center">
-                        <p class="text-secondary fs-15">
-                            Need an account? <a href="{{path('app_register')}}"
-                                class="d-color text-decoration-none">Create one</a>
-                        </p>
+                        {% include 'component/form_alert.html.twig' %}
+
+                        <form action="{{ path('app_auth_send') }}" method="post">
+                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+                            <div class="mb-3">
+                                <input class="form-control" type="email" placeholder="Email" aria-label="Email"
+                                       name="_username" required
+                                       style="height: 46px; border-radius: 0;">
+                                <small class="text-secondary">Enter the email to receive your login code</small>
+                            </div>
+                            <div class="mb-3">
+                                <button class="btn btn-primary w-100" style="height: 46px; border-radius: 0;">
+                                    Sign In
+                                </button>
+                            </div>
+                        </form>
+
+                        <div class="my-3 text-center">
+                            <p class="text-secondary fs-15">
+                                Need an account? <a href="{{ path('app_register') }}"
+                                                    class="d-color text-decoration-none">Create one</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 {% endblock %}
