--- a/templates/account/register.html.twig
+++ b/templates/account/register.html.twig
@@ -4,61 +4,62 @@
 
 {% block body %}
 
-<div class="container-fluid">
-    <div class="container p-0">
-        <div class="row justify-content-center pt-5">
-            <div class="col-lg-4 pt-5">
-                <div class="d-border p-4">
+    <div class="container-fluid">
+        <div class="container p-0">
+            <div class="row justify-content-center pt-5">
+                <div class="col-lg-4 pt-5">
+                    <div class="d-border p-4">
 
-                    <div class="text-center pt-3">
+                        <div class="text-center pt-3">
 
-                        {% include 'component/logo.html.twig' %}
+                            {% include 'component/logo.html.twig' %}
 
-                        <h4 class="my-3 text-center text-secondary">Get Started</h4>
-                        <p class="text-center text-secondary mb-3 fs-15">Sign up with work email</p>
-                    </div>
-
-                    {% include 'component/form_alert.html.twig' %}
-
-                    <form action="{{ path('app_register_new') }}" method="post">
-                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-                        <div class="mb-3">
-                            <input class="form-control" type="text" placeholder="Name" aria-label="Full-Name"
-                                name="name" required style="height: 46px; border-radius: 0;">
+                            <h4 class="my-3 text-center text-secondary">Get Started</h4>
+                            <p class="text-center text-secondary mb-3 fs-15">Sign up with work email</p>
                         </div>
 
-                        <div class="mb-3">
-                            <input class="form-control" type="email" placeholder="Email" aria-label="Email"
-                                name="_username" required style="height: 46px; border-radius: 0;">
-                        </div>
+                        {% include 'component/form_alert.html.twig' %}
 
-                        <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" name="confirm" required id="confirm">
-                            <label class="form-check-label text-secondary fs-15" for="confirm">
-                                I accept {{appName()}}'s <a href="{{path('app_legal_privacy_policy')}}"
-                                    class="text-primary text-decoration-none" rel="nofollow">
-                                    Privacy Policy
-                                </a>
-                            </label>
-                        </div>
+                        <form action="{{ path('app_register_new') }}" method="post">
+                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-                        <div class="mb-3">
-                            <button class="btn btn-primary w-100" style="height: 46px; border-radius: 0;">
-                                Sign Up
-                            </button>
-                        </div>
-                    </form>
+                            <div class="mb-3">
+                                <input class="form-control" type="text" placeholder="Name" aria-label="Full-Name"
+                                       name="name" required style="height: 46px; border-radius: 0;">
+                            </div>
 
-                    <div class="my-3 text-center">
-                        <p class="text-secondary fs-15"> Already have an account?
-                            <a href="{{path('app_login')}}" class="d-color text-decoration-none">Login</a>
-                        </p>
+                            <div class="mb-3">
+                                <input class="form-control" type="email" placeholder="Email" aria-label="Email"
+                                       name="_username" required style="height: 46px; border-radius: 0;">
+                            </div>
+
+                            <div class="form-check mb-3">
+                                <input class="form-check-input" type="checkbox" name="confirm" required id="confirm">
+                                <label class="form-check-label text-secondary fs-15" for="confirm">
+                                    I accept {{ appName() }}'s <a href="{{ path('app_legal_privacy_policy') }}"
+                                                                  class="text-primary text-decoration-none"
+                                                                  rel="nofollow">
+                                        Privacy Policy
+                                    </a>
+                                </label>
+                            </div>
+
+                            <div class="mb-3">
+                                <button class="btn btn-primary w-100" style="height: 46px; border-radius: 0;">
+                                    Sign Up
+                                </button>
+                            </div>
+                        </form>
+
+                        <div class="my-3 text-center">
+                            <p class="text-secondary fs-15"> Already have an account?
+                                <a href="{{ path('app_login') }}" class="d-color text-decoration-none">Login</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 {% endblock %}
