--- a/templates/account/auth.html.twig
+++ b/templates/account/auth.html.twig
@@ -18,8 +18,7 @@
 
                             <p class="text-center text-secondary mb-3 fs-15">
                                 For security reasons, we will send you a security code via e-mail which you can use it
-                                to
-                                access your dashboard.
+                                to access your dashboard.
                             </p>
                         </div>
 
