--- a/templates/component/custom_type_message_top_fixed.html.twig
+++ b/templates/component/custom_type_message_top_fixed.html.twig
@@ -4,7 +4,8 @@
             {# warning #}
             {% if error is defined and error %}
                 <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                    <img src="{{ asset('assets/img/svg/exclamation-triangle.svg') }}" alt="Warning" width="15"
+                    <img loading="lazy" decoding="async"
+                         src="{{ asset('assets/img/svg/exclamation-triangle.svg?v=1.0') }}" alt="Warning" width="15"
                          height="15"
                          style="margin-top: -4px;"> {{ error.messageKey|trans(error.messageData, 'security') }}
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -13,7 +14,8 @@
 
             {% for message in app.flashes('warning') %}
                 <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                    <img src="{{ asset('assets/img/svg/exclamation-triangle.svg') }}" alt="Warning" width="15"
+                    <img loading="lazy" decoding="async"
+                         src="{{ asset('assets/img/svg/exclamation-triangle.svg?v=1.0') }}" alt="Warning" width="15"
                          height="15"
                          style="margin-top: -4px;"> {{ message }}
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -23,7 +25,8 @@
             {# notice #}
             {% for message in app.flashes('notice') %}
                 <div class="alert alert-info alert-dismissible fade show" role="alert">
-                    <img src="{{ asset('assets/img/svg/exclamation-circle.svg') }}" alt="Warning" width="15" height="15"
+                    <img loading="lazy" decoding="async"
+                         src="{{ asset('assets/img/svg/exclamation-circle.svg?v=1.0') }}" alt="Warning" width="15" height="15"
                          style="margin-top: -4px;"> {{ message }}
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
@@ -32,7 +35,8 @@
             {# success #}
             {% for message in app.flashes('success') %}
                 <div class="alert alert-success alert-dismissible fade show" role="alert">
-                    <img src="{{ asset('assets/img/svg/check2-circle.svg') }}" alt="Warning" width="15" height="15"
+                    <img loading="lazy" decoding="async"
+                         src="{{ asset('assets/img/svg/check2-circle.svg?v=1.0') }}" alt="Warning" width="15" height="15"
                          style="margin-top: -4px;"> {{ message }}
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
