--- a/templates/component/form_alert.html.twig
+++ b/templates/component/form_alert.html.twig
@@ -1,7 +1,8 @@
 <div class="py-1">
     {% if error is defined and error %}
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <img src="{{ asset('assets/img/svg/exclamation-triangle.svg') }}" alt="Warning" width="15" height="15"
+            <img loading="lazy" decoding="async"
+                 src="{{ asset('assets/img/svg/exclamation-triangle.svg?v=1.0') }}" alt="Warning" width="15" height="15"
                  style="margin-top: -4px;"> {{ error.messageKey|trans(error.messageData, 'security') }}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
@@ -9,7 +10,8 @@
 
     {% for message in app.flashes('warning') %}
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <img src="{{ asset('assets/img/svg/exclamation-triangle.svg') }}" alt="Warning" width="15" height="15"
+            <img loading="lazy" decoding="async"
+                 src="{{ asset('assets/img/svg/exclamation-triangle.svg?v=1.0') }}" alt="Warning" width="15" height="15"
                  style="margin-top: -4px;"> {{ message }}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
@@ -17,7 +19,8 @@
 
     {% for message in app.flashes('notice') %}
         <div class="alert alert-notice alert-dismissible fade show" role="alert">
-            <img src="{{ asset('assets/img/svg/exclamation-circle.svg') }}" alt="Warning" width="15" height="15"
+            <img loading="lazy" decoding="async"
+                 src="{{ asset('assets/img/svg/exclamation-circle.svg?v=1.0') }}" alt="Warning" width="15" height="15"
                  style="margin-top: -4px;"> {{ message }}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
@@ -25,7 +28,8 @@
 
     {% for message in app.flashes('success') %}
         <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <img src="{{ asset('assets/img/svg/check2-circle.svg') }}" alt="Warning" width="15" height="15"
+            <img loading="lazy" decoding="async"
+                 src="{{ asset('assets/img/svg/check2-circle.svg?v=1.0') }}" alt="Warning" width="15" height="15"
                  style="margin-top: -4px;"> {{ message }}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
