--- a/templates/dashboard/layout/sidebar.html.twig
+++ b/templates/dashboard/layout/sidebar.html.twig
@@ -4,7 +4,8 @@
 
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <img src="{{ asset('lte/img/avatar-160x160.png?v=1.0') }}" class="img-circle" alt="User Image">
+                <img loading="lazy" decoding="async"
+                     src="{{ asset('lte/img/avatar-160x160.png?v=1.0') }}" class="img-circle" alt="User Image">
             </div>
             <div class="info">
                 <a href="{{ path('app_profile_index') }}" class="d-block">{{ app.user.name|capitalize }}</a>
