--- a/templates/layout/navbar_without.html.twig
+++ b/templates/layout/navbar_without.html.twig
@@ -4,7 +4,8 @@
         <div class="row py-3">
             <div class="col-6">
                 <a class="navbar-brand" href="{{ path('app_home') }}">
-                    <img src="{{ asset('assets/img/favicon/favicon-32x32.png?v=1.0') }}" alt="{{ appName() }}">
+                    <img loading="lazy" decoding="async"
+                         src="{{ asset('assets/img/favicon/favicon-32x32.png?v=1.0') }}" alt="{{ appName() }}">
                 </a>
             </div>
             <div class="col-6">
