--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -27,7 +27,8 @@
 
                         <div class="d-flex p-3 p-lg-4">
                             <div class="">
-                                <img src="{{ asset('assets/img/avatar-160x160.png?v=1.0') }}" height="120px" alt="Avatar"
+                                <img loading="lazy" decoding="async"
+                                     src="{{ asset('assets/img/avatar-160x160.png?v=1.0') }}" height="120px" alt="Avatar"
                                      style="border-radius: 15px;">
                             </div>
                             <div class="ms-2 ms-lg-3">
