--- a/templates/dashboard/users/edit.html.twig
+++ b/templates/dashboard/users/edit.html.twig
@@ -10,11 +10,11 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-8">
-                        <h4 class="m-0 text-dark">Edit User Details</h4>
+                        <h5 class="m-0 text-dark">Edit User Details</h5>
                     </div>
                     <div class="col-4">
                         <div class="breadcrumb float-right">
-                            <a href="{{ path('app_dashboard_users_index') }}" class="text-secondary">
+                            <a href="{{ path('app_dashboard_users_index') }}" class="text-secondary pb-1">
                                 Close <span class="fa fa-window-close"></span>
                             </a>
                         </div>
