--- a/templates/layout/base.html.twig
+++ b/templates/layout/base.html.twig
@@ -4,9 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="csrf-token" content="mb6f861916b2e16b2cf884a222ac134f2fb7620d"/>
-    <meta http-equiv="pragma" content="no-cache">
-    <meta http-equiv="cache-control" content="NO-CACHE">
+    <meta name="csrf-token" content="{{ csrf_token('meta') }}"/>
     <meta http-equiv="x-dns-prefetch-control" content="on">
     <meta name="referrer" content="origin">
     <meta http-equiv="Referrer-Policy" content="no-referrer, strict-origin-when-cross-origin">
@@ -34,13 +32,15 @@
     <meta content="telephone=no" name="format-detection"/>
 
     <base target="_self">
-
+    <meta http-equiv="Cache-Control" content="public, max-age=86400">
+    <meta http-equiv="Expires" content="{{ cacheExpiresDatetime() }}">
+    <link rel='preconnect' href='{{ app.request.schemeAndHttpHost }}'/>
     <link rel='dns-prefetch' href='//{{ app.request.schemeAndHttpHost }}'/>
 
     {% block stylesheets %}
-        <link href="{{ asset('assets/css/bootstrap-icons.min.css?v=1.10.5') }}" rel="stylesheet"/>
-        <link href="{{ asset('assets/css/bootstrap.min.css?v=5.3.0') }}" rel="stylesheet"/>
-        <link href="{{ asset('assets/css/main.css?v=1.0.0') }}" rel="stylesheet"/>
+        <link href="{{ asset('lib/bootstrap/css/bootstrap-icons.min.css?v=1.10.5') }}" rel="stylesheet" media="all"/>
+        <link href="{{ asset('lib/bootstrap/css/bootstrap.min.css?v=5.3.0') }}" rel="stylesheet" media="all"/>
+        <link href="{{ asset('assets/css/main.css?v=1.0.0') }}" rel="stylesheet" media="all"/>
     {% endblock %}
 
     <noscript>
@@ -54,9 +54,9 @@
 {% block body %}{% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('assets/js/bootstrap.bundle.min.js?v=5.1.0') }}"></script>
-    <script src="{{ asset('assets/js/jquery.min.js?v=3.2.0') }}"></script>
-    <script src="{{ asset('assets/js/sweetalert.min.js?v=1.0.0') }}" defer></script>
+    <script src="{{ asset('lib/bootstrap/js/bootstrap.bundle.min.js?v=5.1.0') }}" defer></script>
+    <script src="{{ asset('lib/bootstrap/js/jquery.min.js?v=3.2.0') }}"></script>
+    <script src="{{ asset('lib/sweetalert/sweetalert.min.js?v=1.0.0') }}" defer></script>
     <script src="{{ asset('assets/js/app.js?v=1.0.0') }}"></script>
 {% endblock %}
 
